DT-1897: 🔧 Upgrade to spring boot 2.4.5 and java 16 (#897)
* DT-1897: 🔧 Upgrade to spring boot 2.4.5 and java 16

* DT-1897: 🔧 Fix executors

* DT-1897: 🔧 Fix tests after upgrade of spring boot and java