@@ -1,5 +1,5 @@
 plugins {
-    id("uk.gov.justice.hmpps.gradle-spring-boot") version "3.1.6"
+    id("uk.gov.justice.hmpps.gradle-spring-boot") version "3.1.7"
 }
 
 group 'uk.gov.justice.hmpps.prison'
@@ -33,9 +33,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
-    implementation 'org.springframework:spring-jms:5.3.5'
+    implementation 'org.springframework:spring-jms:5.3.6'
 
-    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.992')
+    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.1001')
     implementation 'com.amazonaws:amazon-sqs-java-messaging-lib:1.0.8'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
@@ -58,8 +58,8 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok:1.18.20'
 
-    runtime 'org.hsqldb:hsqldb:2.5.1'
-    runtime 'org.flywaydb:flyway-core:7.7.2'
+    runtimeOnly 'org.hsqldb:hsqldb:2.5.1'
+    runtimeOnly 'org.flywaydb:flyway-core:7.8.1'
 
     testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
     testImplementation 'io.rest-assured:rest-assured:4.3.3'
@@ -103,6 +103,7 @@ task testWithSchemaNomis(type: Test) {
     useJUnitPlatform()
     minHeapSize = "128m"
     maxHeapSize = "2048m"
+    jvmArgs = ["--illegal-access=permit"]
 }
 
 task testWithSchemaNomisOracle(type: Test) {
@@ -113,6 +114,13 @@ task testWithSchemaNomisOracle(type: Test) {
     exclude '**/*IntTest*'
     environment nomisEnvVars
     useJUnitPlatform()
+    jvmArgs = ["--illegal-access=permit"]
 }
 
 test.dependsOn testIntegration, testWithSchemaNomis
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        jvmTarget = "15"
+    }
+}
